# plotnine-extra

./: .gitignore  CLAUDE.md  EVALUATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: PORTING_PLAN.md  conf.py  index.rst  installation.rst  make.bat
docs/api/: animation.rst  composition.rst  geoms.rst  index.rst  stats.rst
docs/vignettes/: basic-barplot.ipynb  beeswarm-plots.ipynb  index.rst  stat-compare.ipynb  stat-pwc.ipynb
plotnine/: __init__.py
plotnine/coords/: __init__.py  coord_polar.py  coord_quickmap.py  coord_radial.py  coord_sf.py
plotnine/facets/: facet.py
plotnine/geoms/: __init__.py  geom_contour.py  geom_contour_filled.py  geom_curve.py  geom_density_2d_filled.py  geom_function.py  geom_hex.py  geom_sf.py  geom_sf_label.py  geom_sf_text.py
plotnine/guides/: __init__.py  guide_bins.py  guide_colorsteps.py  guide_custom.py  guide_none.py
plotnine/scales/: __init__.py  scale_binned.py  scale_color.py  scale_color_binned.py  scale_linewidth.py  sec_axis.py
plotnine/stats/: __init__.py  _hexbin.py  stat_align.py  stat_bin_hex.py  stat_connect.py  stat_contour.py  stat_contour_filled.py  stat_density_2d.py  stat_density_2d_filled.py  stat_manual.py  stat_sf.py  stat_sf_coordinates.py  stat_spoke.py  stat_summary_2d.py  stat_summary_hex.py
plotnine_extra/: __init__.py  _patches.py  animation.py
plotnine_extra/composition/: _beside.py  _compose.py  _plot_annotation.py  _plot_layout.py  _plot_spacer.py  _stack.py  _wrap.py
plotnine_extra/coords/: __init__.py  coord_axes_inside.py  coord_polar.py  coord_quickmap.py  coord_radial.py  coord_sf.py
plotnine_extra/data/: __init__.py  toothgrowth.csv  wine.csv
plotnine_extra/facets/: __init__.py  facet_grid2.py  facet_manual.py  facet_nested.py  facet_nested_wrap.py  facet_wrap2.py  facetted_pos_scales.py  scale_facet.py
plotnine_extra/facets/strips/: __init__.py  strip.py  strip_nested.py  strip_split.py  strip_tag.py  strip_themed.py
plotnine_extra/geoms/: __init__.py  _position_geom_mixin.py  annotation_stripes.py  geom_beeswarm.py  geom_box.py  geom_bracket.py  geom_contour.py  geom_contour_filled.py  geom_curve.py  geom_density_2d_filled.py  geom_function.py  geom_half_boxplot.py  geom_half_violin.py  geom_hex.py  geom_outline_point.py  geom_pointdensity.py  geom_pointpath.py  geom_pwc.py  geom_quasirandom.py  geom_rectmargin.py  geom_richtext.py  geom_sf.py  geom_sf_label.py  geom_sf_text.py  geom_signif.py  geom_spoke.py  geom_text_aimed.py  geom_text_repel.py  geom_textbox.py  geom_tilemargin.py
plotnine_extra/guides/: __init__.py  guide_bins.py  guide_colorsteps.py  guide_custom.py  guide_none.py
plotnine_extra/palettes/: __init__.py  _ggsci.py  palettes.py
plotnine_extra/positions/: __init__.py  _beeswarm_algorithms.py  position_beeswarm.py  position_disjoint_ranges.py  position_lineartrans.py  position_quasirandom.py
plotnine_extra/scales/: __init__.py  scale_binned.py  scale_color_binned.py  scale_color_viridis.py  scale_linewidth.py  scale_manual.py  scale_multi.py
plotnine_extra/stats/: __init__.py  _base_stat_test.py  _common.py  _contour.py  _label_utils.py  _p_format.py  _stat_test.py  p_format.py  stat_align.py  stat_anova_test.py  stat_bin_hex.py  stat_central_tendency.py  stat_centroid.py  stat_chull.py  stat_compare.py  stat_compare_means.py  stat_conf_ellipse.py  stat_connect.py  stat_contour.py  stat_contour_filled.py  stat_cor.py  stat_density_2d_filled.py  stat_difference.py  stat_friedman_test.py  stat_funxy.py  stat_kruskal_test.py  stat_manual.py  stat_mean.py  stat_midpoint.py  stat_overlay_normal_density.py  stat_pointdensity.py  stat_pvalue_manual.py  stat_pwc.py  stat_regline_equation.py  stat_rle.py  stat_rollingkernel.py  stat_sf.py  stat_sf_coordinates.py  stat_spoke.py  stat_stars.py  (+4 more)
plotnine_extra/themes/: __init__.py  styling.py  theme_pub.py
plotnine_extra/utils/: __init__.py  conveniences.py  summary.py
tests/: conftest.py  test_animation.py  test_annotation_stripes.py  test_audit_regressions.py  test_beeswarm_ggtext.py  test_data.py  test_geom_pointdensity.py  test_geom_spoke.py  test_ggh4x_layers.py  test_integration.py  test_new_features.py  test_palettes_and_styling.py  test_plot_composition.py  test_plotnine_extra.py  test_stat_compare.py  test_stat_internals.py  test_stat_layers.py  test_summary_helpers.py  test_utils_conveniences.py
