########## Project ##########
[project]
name = "plotnine-extra"
description = "Extra geoms, stats, scales, and more for plotnine — a Grammar of Graphics extension"
license = {file = "LICENSE"}
authors = [
  {name = "mdmanurung"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "plotnine>=0.15.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "plotnine-extra[extra]",
    "plotnine-extra[test]",
    "plotnine-extra[dev]",
]

# Extra packages for optional features (e.g., spatial/SF support)
extra = [
    "geopandas>=1.0.0",
    "geodatasets>=2024.8.0",
    "scikit-learn>=1.3.0",
    "contourpy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

dev = [
    "ruff",
    "pre-commit",
]

[project.urls]
homepage = "https://github.com/mdmanurung/plotnine"
repository = "https://github.com/mdmanurung/plotnine"

########## Build System ##########
[build-system]
requires = [
    "setuptools>=59",
    "setuptools_scm[toml]>=6.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

########## Tool - Setuptools ##########
[tool.setuptools.packages.find]
include = ["plotnine_extra*"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"
version_scheme = "guess-next-dev"

########## Tool - Pytest ##########
[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--import-mode=importlib"

########## Tool - Coverage ##########
[tool.coverage.run]
branch = true
source = ["plotnine_extra"]
include = [
    "plotnine_extra/*"
]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^def test_",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
precision = 1


########## Tool - Pyright ##########
[tool.pyright]
include = [
    "plotnine_extra/"
]
ignore = []
defineConstant = { DEBUG = true }
useLibraryCodeForTypes = true
executionEnvironments = []
stubPath = ""

########## Tool - Ruff ##########
[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
   "E",
   "F",
   "I",
   "TCH",
   "Q",
   "PIE",
   "PTH",
   "PD",
   "PYI",
   "RSE",
   "SIM",
   "B904",
   "FLY",
   "NPY",
   "PERF102"
]
ignore = [
    "E741",
    "E743",
    "PD002",
]

fixable = ["ALL"]
unfixable = []

exclude = [
    "**/__pycache__",
    "node_modules"
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"plotnine_extra/__init__.py" = ["F403", "F405", "E402"]
