########## Project ##########
[project]
name = "plotnine-extra"
description = "Extension package for plotnine with extra geoms, stats, composition, and animation"
license = {text = "MIT"}
authors = [
  {name = "Hassan Kibirige", email = "has2k1@gmail.com"},
]
version = "0.1.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "plotnine>=0.15.3",
    "scipy>=1.10.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "plotnine-extra[lint]",
    "plotnine-extra[test]",
    "plotnine-extra[build]",
    "plotnine-extra[dev]",
]

lint = [
    "ruff",
]

test = [
    "pytest-cov>=4.0.0"
]

build = [
    "build",
    "wheel",
]

dev = [
    "twine",
    "pre-commit",
]

doc = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx>=0.9",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/mdmanurung/plotnine-extra"
Repository = "https://github.com/mdmanurung/plotnine-extra.git"
"Bug Tracker" = "https://github.com/mdmanurung/plotnine-extra/issues"

########## Build System ##########
[build-system]
# Pin setuptools below 75 to avoid PEP 639 license-expression metadata
# that is not yet supported by all tooling (e.g. twine check).
requires = [
    "setuptools>=59,<75",
    "wheel",
]
build-backend = "setuptools.build_meta"

########## Tool - Setuptools ##########
[tool.setuptools.packages.find]
include = ["plotnine_extra*"]

########## Tool - Pytest ##########
[tool.pytest.ini_options]
testpaths = [
    "tests"
]
doctest_optionflags = "ALLOW_BYTES NORMALIZE_WHITESPACE"
addopts = "--import-mode=importlib"

########## Tool - Coverage ##########
# Coverage.py
[tool.coverage.run]
branch = true
source = ["plotnine_extra"]
include = [
    "plotnine_extra/*"
]
omit = [
    "tests/*",
]

disable_warnings = ["include-ignored"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^def test_",
    "if __name__ == .__main__.:",
    "raise NotImplementedError('Not Implemented')",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "except PackageNotFoundError:",
]
precision = 1


########## Tool - Pyright ##########
[tool.pyright]
include = [
    "plotnine_extra/"
]
ignore = []
defineConstant = { DEBUG = true }
useLibraryCodeForTypes = true
reportUnnecessaryTypeIgnoreComment = true
executionEnvironments = []
stubPath = ""

########## Tool - Ruff ##########
[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
   "E",
   "F",
   "I",
   "TCH",
   "Q",
   "PIE",
   "PTH",
   "PD",
   "PYI",
   "RSE",
   "SIM",
   "B904",
   "FLY",
   "NPY",
   "PERF102"
]
ignore = [
    "E741",  # Ambiguous l
    "E743",  # Ambiguous I
    # .reset_index, .rename, .replace
    "PD002",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    "**/__pycache__",
    "node_modules"
]


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"plotnine_extra/__init__.py" = ["F403", "F405", "F401"]
